--- a/default_config.json
+++ b/default_config.json
@@ -5,43 +5,43 @@
 		{
 			"sym": 75,
 			"max_hp": 15,
-			"damage": 1,
-			"solid": true
+			"damage": 1
 		},
 		"Princess":
 		{
 			"sym": 80,
 			"max_hp": 1,
-			"damage": 0,
-			"solid": true
+			"damage": 0
 		},
 		"Zombie":
 		{
 			"sym": 90,
 			"max_hp": 3,
-			"damage": 1,
-			"solid": true
+			"damage": 1
 		},
 		"Dragon":
 		{
 			"sym": 68,
 			"max_hp": 15,
-			"damage": 2,
-			"solid": true
+			"damage": 2
 		},
 		"Wall":
 		{
 			"sym": 35,
 			"max_hp": 1,
-			"damage": 0,
-			"solid": true
+			"damage": 0
 		},
 		"AidKit":
 		{
 			"sym": 43,
 			"max_hp": 1,
-			"damage": -15,
-			"solid": true
+			"damage": -15
+		},
+		"Fireball":
+		{
+			"sym": 64,
+			"max_hp": 1,
+			"damage": 10
 		}
 	}
 }
