Fix GCC 8 deps (at least I tried)

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   apt:
     update: true
     sources:
-      - sourceline: 'ppa:jonathonf/gcc-8.1'
+      - sourceline: 'ppa:jonathonf/gcc'
     packages:
       - gcc-8
       - libncurses5-dev
