--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
       compiler: gcc
       env: "Build binaries"
       script:
-        - /usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release
+        - /usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release -DTRAVIS_BUILD
         - /usr/local/bin/cmake --build build
         - /usr/local/bin/cmake --build build --target roguelike
 
@@ -29,7 +29,7 @@ matrix:
       compiler: gcc
       env: "Code coverage"
       script:
-        - /usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Debug
+        - /usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Debug -DTRAVIS_BUILD
         - /usr/local/bin/cmake --build build
         - /usr/local/bin/cmake --build build --target roguelike-tests
       after_success:
