--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,9 +74,11 @@ target_link_libraries(${PROJECT_NAME}-tests PRIVATE rcfs::rc)
 target_link_libraries(${PROJECT_NAME}-tests PUBLIC stdc++fs)
 target_link_libraries(${PROJECT_NAME}-tests PUBLIC Catch2::Catch2)
 
+if(NOT DEFINED TRAVIS_BUILD)
 pvs_studio_add_target(TARGET ${PROJECT_NAME}.analyze ALL
         MODE GA:1,2;OP:1,2
         ANALYZE ${PROJECT_NAME}
         OUTPUT FORMAT errorfile
         LOG target_${PROJECT_NAME}.err
         RECURSIVE)
+endif(NOT DEFINED TRAVIS_BUILD)
