--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 matrix:
   include:
     - os: linux
-      compiler: gcc-8
+      compiler: g++-8
       env: "Build binaries"
       script:
         - /usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release -DTRAVIS_BUILD=1
@@ -29,7 +29,7 @@ matrix:
         - /usr/local/bin/cmake --build build --target roguelike
 
     - os: linux
-      compiler: gcc-8
+      compiler: g++-8
       env: "Code coverage"
       script:
         - /usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Debug -DTRAVIS_BUILD=1
