--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
       -DTRAVIS_BUILD=1"
     - "/usr/local/bin/cmake --build build"
     - "/usr/local/bin/cmake --build build --target roguelike"
-    - mv build/roguelike "build/roguelike-$TRAVIS_TAG-ncurses"
+    - mv build/roguelike build/roguelike-$TRAVIS_TAG-ncurses
     deploy:
       provider: releases
       skip_cleanup: true
@@ -51,6 +51,7 @@ before_install:
 - sudo apt-get install -qq --yes --force-yes binutils
 - export CXX="g++-8"
 - export CC="gcc-8"
+- export GCOV="gcov-8"
 install:
 - wget https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4-Linux-x86_64.sh
 - sudo sh cmake-3.13.4-Linux-x86_64.sh --skip-license --prefix=/usr/local --exclude-subdir
