--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
       -DTRAVIS_BUILD=1"
     - "/usr/local/bin/cmake --build build"
     - "/usr/local/bin/cmake --build build --target roguelike"
-    - zip roguelike-$TRAVIS_TAG-ncurses.zip -r -5 build/roguelike
+    - zip roguelike-$TRAVIS_TAG-ncurses.zip -r -5 ./LICENSE ./build/roguelike
     deploy:
       provider: releases
       skip_cleanup: true
