--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
   - os: linux
     compiler: g++-8
     env: Build binaries (with ncurses)
+    if: tag IS present
     script:
     - "/usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release -DGRAPHICS_LIB=ncurses
       -DTRAVIS_BUILD=1"
@@ -44,6 +45,7 @@ matrix:
   - os: linux
     compiler: g++-8
     env: Build binaries (no ncurses)
+    if: tag IS present
     script:
     - "/usr/local/bin/cmake -H. -Bbuild -DCMAKE_BUILD_TYPE=Release -DTRAVIS_BUILD=1"
     - "/usr/local/bin/cmake --build build"
